<resources>
    <string name="app_name">Resus</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_profile">Bluetooth Profile</string>
    <string name="menu_services">Bluetooth Services</string>
    <string name="menu_new_game">New Game</string>

    <string name="screen_title_main">Device List</string>

    <string name="model_number">Model Number:</string>
    <string name="serial_number">Serial Number:</string>
    <string name="hardware_revision">Hardware Revision:</string>
    <string name="firmware_revision">Firmware Revision:</string>

    <string name="scrolling_delay">Scrolling Delay</string>
    <string name="display_text">Display Text</string>
    <string name="bluetooth_scanning">Bluetooth Scanning</string>
    <string name="scan_filter_unpaired">Filter unpaired micro:bits from scan results?</string>
    <string name="bluetooth_services">Bluetooth Services on micro:bit</string>
    <string name="services_key">Key</string>
    <string name="service_generic_access">Generic Access Service</string>
    <string name="service_generic_attribute">Generic Attribute Service</string>
    <string name="service_event">Event Service</string>
    <string name="service_dfu_control">DFU Control Service</string>
    <string name="viewResult">View Result Page</string>
    <string name="CPR_TEST">CPR Test</string>
    <string name="screen_title_CPR_test">CPR TEST</string>
    <string name="screen_title_settings">Settings</string>
    <string name="centimeters">Centimeters</string>
    <string name="Inches">Inches</string>
    <string name="depth_Measurement">Depth Measurement</string>
    <string name="SetCompressionTime">Set Compression Time</string>
    <string name="thirtySeconds">30 Seconds</string>
    <string name="SixtySeconds">60 Seconds</string>
    <string name="OneHundredTwentySeconds">120 Seconds</string>
    <string name="logout">Log Out</string>
    <string name="username">Username</string>
    <string name="email_username">Email/Username</string>
    <string name="email">Email</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="register">register</string>
    <string name="existingUser">Already have an account?</string>
    <string name="login">Login</string>
    <string name="compressionUnit">Rate (CPM)</string>
    <string name="apiURL">http://vps-ae71c440.vps.ovh.ca:3000</string>
    <string name="ScanQR">Scan QR Code</string>
    <string name="EnterCode">Enter Code</string>
    <string name="Name">Name</string>
</resources>
