<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bluetooth.pa2123.resus.ui.settings">

    <TextView
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:id="@+id/depthMeasurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/depth_Measurement"/>

    <RadioGroup
        android:id="@+id/radioMeasurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/depthMeasurement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <RadioButton
            android:id="@+id/centimeter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/centimeters"
            android:onClick="checkMeasurement"/>
        <RadioButton
            android:id="@+id/inche"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Inches"
            android:onClick="checkMeasurement"/>
    </RadioGroup>

    <TextView
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:id="@+id/compTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radioMeasurement"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/SetCompressionTime"/>

    <RadioGroup
        android:id="@+id/radioCompTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/compTimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <RadioButton
            android:id="@+id/thirtySec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirtySeconds"
            android:onClick="checkCompTime"/>
        <RadioButton
            android:id="@+id/sixtySec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SixtySeconds"
            android:onClick="checkCompTime"/>
        <RadioButton
            android:id="@+id/oneHundredTwentySec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OneHundredTwentySeconds"
            android:onClick="checkCompTime"/>
    </RadioGroup>

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>